syntax = "proto3";

package storage;

option go_package = "proto/gen;storagepb";

service StorageService {
  rpc UploadLogo(UploadLogoRequest) returns (UploadLogoResponse);
  rpc DeleteLogo(DeleteLogoRequest) returns (DeleteLogoResponse);
}

message UploadLogoRequest {
  string university_id = 1;
  bytes file_data = 2;
  string file_extension = 3;
}

message UploadLogoResponse {
  string object_name = 1;
  string url = 2;
}

message DeleteLogoRequest {
  string university_id = 1;
  string file_extension = 2;
}

message DeleteLogoResponse {
  bool success = 1;
}
